--- a/init.x86.rc
+++ b/init.x86.rc
@@ -40,6 +40,8 @@ on boot
     setprop status.battery.level 5
     setprop status.battery.level_raw  50
     setprop status.battery.level_scale 9
+    setprop wifi.interface "wlan0"
+    setprop wlan.driver.status "ok"
 
     # merge from system.prop
     setprop ro.config.sync yes
